--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -96,7 +96,7 @@
                                                 <p:column headerText="Actions" >
                                                     <p:commandButton ajax="false" 
                                                                      value="To Cancel" 
-                                                                     action="#{billSearch.toCancelOpdBill}" 
+                                                                     action="#{billSearch.navigateToCancelOpdBill}" 
                                                                      disabled="#{b.cancelled or b.refundedBill ne null}" >                           
                                                         <f:setPropertyActionListener value="#{b}" target="#{billSearch.bill}" ></f:setPropertyActionListener>
                                                     </p:commandButton>
@@ -104,7 +104,7 @@
                                                     <p:commandButton 
                                                         ajax="false" 
                                                         value="To Refund" 
-                                                        action="/bill_refund" 
+                                                        action="#{billSearch.navigateToRefundOpdBill()}" 
                                                         disabled="#{b.cancelled}" >                          
                                                     </p:commandButton>
                                                 </p:column>
