Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -105,7 +105,8 @@
                                                         ajax="false" 
                                                         value="To Refund" 
                                                         action="#{billSearch.navigateToRefundOpdBill()}" 
-                                                        disabled="#{b.cancelled}" >                          
+                                                        disabled="#{b.cancelled}" >  
+                                                        <f:setPropertyActionListener value="#{b}" target="#{billSearch.bill}" ></f:setPropertyActionListener>
                                                     </p:commandButton>
                                                 </p:column>
                                             </p:dataTable>
