Closes #1256 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -31,7 +31,7 @@
                     <p:menuitem  ajax="false"
                                  action="/home" 
                                  icon="pi pi-home"
-                                 title="Home"
+                                 title="Home *"
                                  ></p:menuitem>
                     <p:submenu 
                         id="smOpd"
