--- a/src/main/webapp/admin/users/user_list.xhtml
+++ b/src/main/webapp/admin/users/user_list.xhtml
@@ -87,6 +87,13 @@
                                         action="#{webUserController.navigateToManagePaymentSchemes()}"
                                         ajax="false" />
                                     <p:commandButton 
+                                        disabled="#{webUserController.selected == null}"  
+                                        class="m-1"
+                                        value="Manage User Icons" 
+                                        action="#{webUserController.navigateToManageUserIcons()}"
+                                        ajax="false" />
+                                    
+                                    <p:commandButton 
                                         disabled="#{webUserController.selected == null}"    
                                         value="Manage Signature" 
                                         class="m-1"
