Closes #1259 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/user_icon_bar.xhtml
+++ b/src/main/webapp/resources/ezcomp/user_icon_bar.xhtml
@@ -39,14 +39,14 @@
                                     class="list-group-item shadow-sm p-0 m-2" 
                                     style="height: 50px;" 
                                     action="#{opdBillController.navigateToSearchPatients()}">
-                                    <h:graphicImage library="icons" name="register.png" style="height: 100%; width: auto;"/>
+                                    <h:graphicImage library="icons" name="opd_billing.png" style="height: 100%; width: auto;"/>
                                 </p:commandLink>
                                 <p:commandLink 
                                     rendered="#{i.icon eq 'Search_Opd_Bill'}"
                                     class="list-group-item shadow-sm p-0 m-2" 
                                     style="height: 50px;" 
                                     action="#{opdBillController.navigateToSearchPatients()}">
-                                    <h:graphicImage library="icons" name="register.png" style="height: 100%; width: auto;"/>
+                                    <h:graphicImage library="icons" name="search_opd_bill.png" style="height: 100%; width: auto;"/>
                                 </p:commandLink>
                             </ui:repeat>
                         </ul>
