Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/channel/channel_payment_report_by_date.xhtml
+++ b/src/main/webapp/channel/channel_payment_report_by_date.xhtml
@@ -28,8 +28,7 @@
                                         value="#{channelReportController.staff}" id="scStaff"
                                         completeMethod="#{staffController.completeConsultant}" var="mys" 
                                         itemLabel="#{mys.person.nameWithTitle}" 
-                                        itemValue="#{mys}"
-                                        converter="stfcon">
+                                        itemValue="#{mys}">
                             
 <!--                            <p:ajax event="itemSelect" update="lstSelect" process="scStaff"  
                                     listener="#{channelReportController.fillSessions}"></p:ajax>-->
