Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/user_icon_bar.xhtml
+++ b/src/main/webapp/resources/ezcomp/user_icon_bar.xhtml
@@ -22,6 +22,7 @@
                         <ul class="list-group list-group-horizontal">
                             <ui:repeat value="#{sessionController.userIcons}" var="i">
                                 <p:commandLink
+                                    title="#{i.icon}"
                                     ajax="false"
                                     class="list-group-item shadow-sm p-0 m-2" 
                                     style="height: 50px;"
